openmediavault (6.5.8-1) stable; urgency=low

  * Fix bug in NFS configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Aug 2023 21:57:35 +0200

openmediavault (6.5.7-1) stable; urgency=low

  * Various improvements.
  * Remove useless Salt state `omv.setup.resolvconf`.
  * Fix bug in NFS configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Aug 2023 16:52:37 +0200

openmediavault (6.5.6-1) stable; urgency=low

  * Fix public key error in APT.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Aug 2023 17:24:53 +0200

openmediavault (6.5.5-1) stable; urgency=low

  * Issue #1572: Set `shadow:localtime = no` in smb.conf because
    several users reported that `Previous Versions` is not working
    in Windows. Note, Windows will display `Date modified` in UTC,
    but this is the compromise to get the them displayed at all.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 01 Aug 2023 20:06:33 +0200

openmediavault (6.5.4-1) stable; urgency=low

  * Various improvements.
  * Enhance cleanup after removing plugins.
  * Issue #1569: Shared folder references are not correctly queried.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 29 Jul 2023 14:51:43 +0200

openmediavault (6.5.3-1) stable; urgency=low

  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 29 Jul 2023 00:14:19 +0200

openmediavault (6.5.2-1) stable; urgency=low

  * Upgrade Salt to version 3006.0.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Jul 2023 22:30:04 +0200

openmediavault (6.5.1-2) stable; urgency=low

  * Update locale files.
  * Fix a home directory issue in Samba when a share has enabled
    the `Time machine` option.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Jul 2023 15:35:02 +0200

openmediavault (6.5.0-3) stable; urgency=low

  * Add ability to specify the supported NFS protocol versions.
  * Improve Debian security repository cleanup.