@@ -8,8 +8,7 @@
                  type="error">
   {{ error | httpErrorResponse:'message' }}
 </omv-alert-panel>
-<mat-card class="omv-max-workbench-content-width"
-          [ngClass]="{'omv-display-none': loading || error}">
+<mat-card [ngClass]="{'omv-display-none': loading || error}">
   <ng-container *ngTemplateOutlet="renderCardHeader"></ng-container>
   <mat-card-content>
     <omv-intuition-form [id]="config.id"
