@@ -51,7 +51,7 @@
 
 <ng-template #renderRrdGraph
              let-name>
-  <mat-card class="omv-max-workbench-content-width">
+  <mat-card>
     <mat-toolbar fxLayout="row"
                  class="omv-sticky">
       <span fxFlex></span>
