@@ -8,8 +8,7 @@
                  type="error">
   {{ error | httpErrorResponse:'message' }}
 </omv-alert-panel>
-<mat-card class="omv-max-workbench-content-width"
-          [ngClass]="{'omv-display-none': loading || error}">
+<mat-card [ngClass]="{'omv-display-none': loading || error}">
   <mat-toolbar *ngIf="config.multiple && config.hasSelectAllButton"
                class="omv-sticky"
                fxLayout="row">
